--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -5,6 +5,7 @@
     max-width: 1350px;
     padding-left: 30px;
     padding-right: 30px;
+    padding-bottom: 30px;
     text-align: center;
     margin: 0 auto;
 }
